2007-10-01  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/at-1.d, gas/mips/at-2.l: New tests to check the ".set
	at=REG" directive.
	* gas/mips/at-1.s, gas/mips/at-2.s: Sources for the new tests.
	* gas/mips/mips.exp: Run the new tests.

2007-10-05  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run smx.

	* gas/i386/smx.d: New.
	* gas/i386/smx.s: Likewise.

2007-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/simd.s: Add tests for unpckhpd and unpckhps.
	* gas/i386/x86-64-simd.s: Likewise.

	* gas/i386/simd-intel.d: Updated.
	* gas/i386/simd.d: Likewise.
	* gas/i386/x86-64-simd-intel.d: Likewise.
	* gas/i386/x86-64-simd.d: Likewise.

2007-10-04  David Daney  <ddaney@avtrex.com>

	* gas/mips/odd-float.d, gas/mips/odd-float.s: New test.
	* gas/mips/mips.exp: Run it.

2007-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5109
	* gas/i386/simd-intel.d: Updated.
	* gas/i386/simd.d: Likewise.
	* gas/i386/x86-64-simd-intel.d: Likewise.
	* gas/i386/x86-64-simd.d: Likewise.

	* gas/i386/simd.s: Add more tests.
	* gas/i386/x86-64-simd.s: Likewise.

2007-10-04  Helge Deller  <deller@gmx.de>

	* gas/all/gas.exp: Include new test "strings".
	* gas/all/string.s: New
	* gas/all/string.d: New.

2007-10-01  Tristan Gingold  <gingold@adacore.com>

	* gas/ppc/altivec_xcoff.s: Do not use .machine pseudo-ops as it
	overrides gas options.
	* gas/ppc/altivec_xcoff64.s: Likewise.
	* gas/ppc/booke_xcoff64.s: Likewise.
	* gas/ppc/altivec_xcoff.d: Accept 32bits offsets.
	* gas/ppc/booke_xcoff.s: Do not use .machine pseudo-op and remove
	booke64 opcodes.
	* gas/ppc/booke_xcoff.d: Accept 32bits offsets and renumber.
	* gas/ppc/booke_xcoff64.d: Use booke opcodes.

2007-09-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5080
	* gas/i386/simd-intel.d: Updated.
	* gas/i386/simd.d: Likewise.
	* gas/i386/x86-64-simd-intel.d: Likewise.
	* gas/i386/x86-64-simd.d: Likewise.

	* gas/i386/simd.s: Add new tests for cvttsd2si and cvttss2si.
	* gas/i386/x86-64-simd.s: Likewise.
